added psuedocode for HTML

--- a/index.html
+++ b/index.html
@@ -8,7 +8,16 @@
     <link rel="stylesheet" type="text/css" href="./assets/styles.css"/>
 </head>
 <body>
-    
+    <header>
+        <h1>Weather App</h1>
+    </header>
+    <aside>
+        <!-- This will be where the search for a city input field and results will show -->
+    </aside>
+    <main>
+        <!-- Add jumbrotron to display current city weather  -->
+        <!-- add next 5 day forecase in a grid format  -->
+    </main>
     <script src="assets/script.js"></script>
 </body>
 </html>
