--- a/index.html
+++ b/index.html
@@ -5,18 +5,31 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <link rel="stylesheet" type="text/css" href="./assets/styles.css"/>
 </head>
 <body>
     <header>
         <h1>Weather App</h1>
     </header>
-    <aside>
-        <!-- This will be where the search for a city input field and results will show -->
-    </aside>
-    <main>
-        <!-- Add jumbrotron to display current city weather  -->
-        <!-- add next 5 day forecase in a grid format  -->
+    <main class="container">
+        <div class="row">
+            <div class="col-4">
+                <div class="card" style="width: 18rem;">
+                    <div class="card-body">
+                      <h5 class="card-title">Search for a City:</h5>
+                      <input>
+                      <a href="#" class="btn btn-primary">Search</a>
+                    </div>
+                  </div>
+            </div>
+            <div class="col-8">
+                <!-- Add jumbrotron to display current city weather  -->
+            </div>
+            <div class="col-8">
+                <!-- add next 5 day forecase in a grid format  -->
+            </div>
+        </div>
     </main>
     <script src="assets/script.js"></script>
 </body>
