added placeholder text for current weather display

--- a/index.html
+++ b/index.html
@@ -14,19 +14,24 @@
     </header>
     <main class="container">
         <div class="row">
-            <div class="col-4">
-                <div class="card" style="width: 18rem;">
-                    <div class="card-body">
-                      <h5 class="card-title">Search for a City:</h5>
-                      <input>
-                      <a href="#" class="btn btn-primary">Search</a>
-                    </div>
-                  </div>
+            <div class="col-4 card">
+                <div class="card-body">
+                    <h5 class="card-title">Search for a City:</h5>
+                    <input>
+                    <a href="#" class="btn btn-primary">Search</a>
+                </div>
             </div>
-            <div class="col-8">
+            <div class="col-8 card">
+                <h5 class="card-title">Atlanta (current date)</h5> 
+                <!-- Add icon for type of weather -->
+                <p>Temp: 74.01 F</p>
+                <p>Wind: 6.67 MPH</p>
+                <p>Humidity: 46%</p>
+                <!-- UV Index needs to have a color set on it Green means good, yellow means ok, and red means bad  -->
+                <p>UV Index: 0.46</p>
                 <!-- Add jumbrotron to display current city weather  -->
             </div>
-            <div class="col-8">
+            <div class="row col-8">
                 <!-- add next 5 day forecase in a grid format  -->
             </div>
         </div>
