added placeholders for 5 Day Forecast

--- a/index.html
+++ b/index.html
@@ -14,15 +14,13 @@
     </header>
     <main class="container">
         <div class="row">
-            <div class="col-4 card">
-                <div class="card-body">
-                    <h5 class="card-title">Search for a City:</h5>
-                    <input>
-                    <a href="#" class="btn btn-primary">Search</a>
-                </div>
+            <div class="col-2">
+                <h5 class="card-title">Search for a City:</h5>
+                <input>
+                <a href="#" class="btn btn-primary">Search</a>
             </div>
-            <div class="col-8 card">
-                <h5 class="card-title">Atlanta (current date)</h5> 
+            <div class="col-10">
+                <h3 class="title">Atlanta (current date)</h3> 
                 <!-- Add icon for type of weather -->
                 <p>Temp: 74.01 F</p>
                 <p>Wind: 6.67 MPH</p>
@@ -31,8 +29,46 @@
                 <p>UV Index: 0.46</p>
                 <!-- Add jumbrotron to display current city weather  -->
             </div>
-            <div class="row col-8">
+            <div class="col-10">
                 <!-- add next 5 day forecase in a grid format  -->
+                <h3>5 Day Forecast: </h3>
+                <div class="container row">
+                    <div class="col-2">
+                        <h5>Date</h5>
+                        <!-- Add icon for weather -->
+                        <p>Temp: </p>
+                        <p>Wind: </p>
+                        <p>Humidity: </p>
+                    </div>
+                    <div class="col-2">
+                        <h5>Date</h5>
+                        <!-- Add icon for weather -->
+                        <p>Temp: </p>
+                        <p>Wind: </p>
+                        <p>Humidity: </p>
+                    </div>
+                    <div class="col-2">
+                        <h5>Date</h5>
+                        <!-- Add icon for weather -->
+                        <p>Temp: </p>
+                        <p>Wind: </p>
+                        <p>Humidity: </p>
+                    </div>
+                    <div class="col-2">
+                        <h5>Date</h5>
+                        <!-- Add icon for weather -->
+                        <p>Temp: </p>
+                        <p>Wind: </p>
+                        <p>Humidity: </p>
+                    </div>
+                    <div class="col-2">
+                        <h5>Date</h5>
+                        <!-- Add icon for weather -->
+                        <p>Temp: </p>
+                        <p>Wind: </p>
+                        <p>Humidity: </p>
+                    </div>
+                </div>
             </div>
         </div>
     </main>
