added Bootstrap grid to HTML

--- a/index.html
+++ b/index.html
@@ -13,13 +13,13 @@
         <h1>Weather App</h1>
     </header>
     <main class="container">
-        <div class="row">
-            <div class="col-2">
-                <h5 class="card-title">Search for a City:</h5>
-                <input>
+        <div class="row justify-content-end">
+            <div class="col-3">
+                <h5 class="title">Search for a City:</h5>
+                <input> <br>
                 <a href="#" class="btn btn-primary">Search</a>
             </div>
-            <div class="col-10">
+            <div class="col-9">
                 <h3 class="title">Atlanta (current date)</h3> 
                 <!-- Add icon for type of weather -->
                 <p>Temp: 74.01 F</p>
@@ -29,39 +29,39 @@
                 <p>UV Index: 0.46</p>
                 <!-- Add jumbrotron to display current city weather  -->
             </div>
-            <div class="col-10">
+            <div class="col-9">
                 <!-- add next 5 day forecase in a grid format  -->
                 <h3>5 Day Forecast: </h3>
-                <div class="container row">
-                    <div class="col-2">
+                <div class="row">
+                    <div class="col">
                         <h5>Date</h5>
                         <!-- Add icon for weather -->
                         <p>Temp: </p>
                         <p>Wind: </p>
                         <p>Humidity: </p>
                     </div>
-                    <div class="col-2">
+                    <div class="col">
                         <h5>Date</h5>
                         <!-- Add icon for weather -->
                         <p>Temp: </p>
                         <p>Wind: </p>
                         <p>Humidity: </p>
                     </div>
-                    <div class="col-2">
+                    <div class="col">
                         <h5>Date</h5>
                         <!-- Add icon for weather -->
                         <p>Temp: </p>
                         <p>Wind: </p>
                         <p>Humidity: </p>
                     </div>
-                    <div class="col-2">
+                    <div class="col">
                         <h5>Date</h5>
                         <!-- Add icon for weather -->
                         <p>Temp: </p>
                         <p>Wind: </p>
                         <p>Humidity: </p>
                     </div>
-                    <div class="col-2">
+                    <div class="col">
                         <h5>Date</h5>
                         <!-- Add icon for weather -->
                         <p>Temp: </p>
