add comments to links

--- a/index.html
+++ b/index.html
@@ -78,6 +78,7 @@
             </div>
         </div>
     </main>
+    <!-- My Javascript Link  -->
     <script src="assets/script.js"></script>
 </body>
 </html>
