add text color to titles

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 </head>
 <body>
     <header>
-        <h1>What's the Weather</h1>
+        <h1>What's the Weather?</h1>
     </header>
     <main class="container">
         <div class="row justify-content-end">
@@ -25,8 +25,8 @@
                 <input> <br>
                 <a href="#" class="btn btn-primary">Search</a>
             </div>
-            <div class="col-9">
-                <h3 class="title">Atlanta (current date)</h3> 
+            <div class="col-9 current-weather-container">
+                <h3 class="title city-name">Atlanta (current date)</h3> 
                 <!-- Add icon for type of weather -->
                 <p>Temp: 74.01 F</p>
                 <p>Wind: 6.67 MPH</p>
@@ -35,39 +35,39 @@
                 <p>UV Index: 0.46</p>
                 <!-- Add jumbrotron to display current city weather  -->
             </div>
-            <div class="col-9">
+            <div class="col-9 forecast-section">
                 <!-- add next 5 day forecase in a grid format  -->
                 <h3>5 Day Forecast: </h3>
                 <div class="row">
-                    <div class="col">
+                    <div class="col forecast-grid">
                         <h5>Date</h5>
                         <!-- Add icon for weather -->
                         <p>Temp: </p>
                         <p>Wind: </p>
                         <p>Humidity: </p>
                     </div>
-                    <div class="col">
+                    <div class="col forecast-grid">
                         <h5>Date</h5>
                         <!-- Add icon for weather -->
                         <p>Temp: </p>
                         <p>Wind: </p>
                         <p>Humidity: </p>
                     </div>
-                    <div class="col">
+                    <div class="col forecast-grid">
                         <h5>Date</h5>
                         <!-- Add icon for weather -->
                         <p>Temp: </p>
                         <p>Wind: </p>
                         <p>Humidity: </p>
                     </div>
-                    <div class="col">
+                    <div class="col forecast-grid">
                         <h5>Date</h5>
                         <!-- Add icon for weather -->
                         <p>Temp: </p>
                         <p>Wind: </p>
                         <p>Humidity: </p>
                     </div>
-                    <div class="col">
+                    <div class="col forecast-grid">
                         <h5>Date</h5>
                         <!-- Add icon for weather -->
                         <p>Temp: </p>
