add display settings to CSS

--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
     </header>
     <main class="container">
         <div class="row justify-content-end">
-            <div class="col-3">
-                <h5 class="title">Search for a City:</h5>
+            <div class="col-3 search-section">
+                <h4 class="title">Search for a City:</h4>
                 <input> <br>
                 <a href="#" class="btn btn-primary">Search</a>
             </div>
