add TO DO comments

--- a/index.html
+++ b/index.html
@@ -17,8 +17,10 @@
 <body>
     <header>
         <h1>What's the Weather?</h1>
+        <!-- TO DO: show current date here  --> 
     </header>
     <main class="container">
+        <!-- TO DO: Add responsive design to layout for smaller screens  -->
         <div class="row justify-content-end">
             <div class="col-3 search-section">
                 <h4 class="title">Search for a City:</h4>
