--- a/index.html
+++ b/index.html
@@ -24,12 +24,12 @@
         <div class="row">
             <aside class="col-3 search-section">
                 <h4 class="title">Search for a City:</h4>
-                <input> <br>
-                <button href="#" class="btn btn-primary">Search</button>
+                <!-- TO DO: Take br out!  -->
+                <input id="city-input"> <br>
+                <button id="search-button" href="#" class="btn btn-primary">Search</button>
                 <hr>
                 <div class="list-group"> 
                     <ul id="history">
-                        <li><button data-location="Chicago">Chicago</button></li>
                     </ul>
                 </div>
             </aside>
