--- a/index.html
+++ b/index.html
@@ -7,6 +7,11 @@
     <title>Weather App</title>
     <!-- Bootstrap link  -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <!-- Moment JS Link  -->
+    <script
+      type="text/javascript"
+      src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.27.0/moment.min.js"
+    ></script>
     <!-- my CSS link  -->
     <link rel="stylesheet" type="text/css" href="./assets/styles.css"/>
     <!-- Google Font Link  -->
@@ -35,15 +40,16 @@
             </aside>
             <div class="col-9">
                 <div class="row current-weather-container">
-                    <h3 class="title city-name">Atlanta (current date)</h3> 
+                    <h3 id="current-city-name" class="title city-name"></h3> 
+                    <h4 id="current-date" class="city-name"></h4>
                     <!-- Add icon for type of weather -->
                     <dl>
                         <dt>Temp: </dt>
-                        <dd>73.72 F</dd>
-                        <dt>Wind: </dt>
-                        <dd>windy</dd>
+                        <dd id="current-city-temp"></dd>
+                        <dt>Clouds: </dt>
+                        <dd>clear skys</dd>
                         <dt>Humidity: </dt>
-                        <dd>66%</dd>
+                        <dd id="current-city-humidity"></dd>
                         <!-- UV Index needs to have a color set on it Green means good, yellow means ok, and red means bad  -->
                         <dt>UV Index: </dt>
                         <dd>0.46</dd>
