started JS from scratch

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                 <!-- TO DO: Take br out!  -->
                 <input id="city-input" placeholder="city name"> <br>
                 <button id="search-button" href="#" class="btn btn-primary">Search</button>
-                <p id="search-error"></p>
+                <p id="search-error"></>
                 <hr>
                 <div class="list-group"> 
                     <ul id="history">
