add current UV and weather icon

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
                 <div class="row forecast-section justify-content-end">
                     <!-- add next 5 day forecase in a grid format  -->
                     <h3>5 Day Forecast: </h3>
-                    <div class="row">
+                    <div id="five-day-forcast" class="row">
                         <div class="col forecast-grid">
                             <h5>Date</h5>
                             <!-- Add icon for weather -->
