got moment js to display next day

--- a/index.html
+++ b/index.html
@@ -61,9 +61,21 @@
                     <!-- add next 5 day forecase in a grid format  -->
                     <h3>5 Day Forecast: </h3>
                     <div id="five-day-forcast" class="row">
-                        <div class="col forecast-grid">
+                        <!-- <div class="col forecast-grid">
                             <h5>Date</h5>
-                            <!-- Add icon for weather -->
+                            Add icon for weather
+                            <dl>
+                                <dt>Temp: </dt>
+                                <dd>73.72 F</dd>
+                                <dt>Wind: </dt>
+                                <dd>windy</dd>
+                                <dt>Humidity: </dt>
+                                <dd>66%</dd>
+                            </dl>
+                        </div> -->
+                        <!-- <div class="col forecast-grid">
+                            <h5>Date</h5>
+                            Add icon for weather
                             <dl>
                                 <dt>Temp: </dt>
                                 <dd>73.72 F</dd>
@@ -75,7 +87,7 @@
                         </div>
                         <div class="col forecast-grid">
                             <h5>Date</h5>
-                            <!-- Add icon for weather -->
+                            Add icon for weather
                             <dl>
                                 <dt>Temp: </dt>
                                 <dd>73.72 F</dd>
@@ -87,7 +99,7 @@
                         </div>
                         <div class="col forecast-grid">
                             <h5>Date</h5>
-                            <!-- Add icon for weather -->
+                            Add icon for weather
                             <dl>
                                 <dt>Temp: </dt>
                                 <dd>73.72 F</dd>
@@ -99,7 +111,7 @@
                         </div>
                         <div class="col forecast-grid">
                             <h5>Date</h5>
-                            <!-- Add icon for weather -->
+                            Add icon for weather
                             <dl>
                                 <dt>Temp: </dt>
                                 <dd>73.72 F</dd>
@@ -108,19 +120,7 @@
                                 <dt>Humidity: </dt>
                                 <dd>66%</dd>
                             </dl>
-                        </div>
-                        <div class="col forecast-grid">
-                            <h5>Date</h5>
-                            <!-- Add icon for weather -->
-                            <dl>
-                                <dt>Temp: </dt>
-                                <dd>73.72 F</dd>
-                                <dt>Wind: </dt>
-                                <dd>windy</dd>
-                                <dt>Humidity: </dt>
-                                <dd>66%</dd>
-                            </dl>
-                        </div>
+                        </div> -->
                     </div>
                 </div>
             </div>
