--- a/index.html
+++ b/index.html
@@ -58,69 +58,9 @@
                     </dl>
                 </div>
                 <div class="row forecast-section justify-content-end">
-                    <!-- add next 5 day forecase in a grid format  -->
                     <h3>5 Day Forecast: </h3>
                     <div id="five-day-forcast" class="row">
-                        <!-- <div class="col forecast-grid">
-                            <h5>Date</h5>
-                            Add icon for weather
-                            <dl>
-                                <dt>Temp: </dt>
-                                <dd>73.72 F</dd>
-                                <dt>Wind: </dt>
-                                <dd>windy</dd>
-                                <dt>Humidity: </dt>
-                                <dd>66%</dd>
-                            </dl>
-                        </div> -->
-                        <!-- <div class="col forecast-grid">
-                            <h5>Date</h5>
-                            Add icon for weather
-                            <dl>
-                                <dt>Temp: </dt>
-                                <dd>73.72 F</dd>
-                                <dt>Wind: </dt>
-                                <dd>windy</dd>
-                                <dt>Humidity: </dt>
-                                <dd>66%</dd>
-                            </dl>
-                        </div>
-                        <div class="col forecast-grid">
-                            <h5>Date</h5>
-                            Add icon for weather
-                            <dl>
-                                <dt>Temp: </dt>
-                                <dd>73.72 F</dd>
-                                <dt>Wind: </dt>
-                                <dd>windy</dd>
-                                <dt>Humidity: </dt>
-                                <dd>66%</dd>
-                            </dl>
-                        </div>
-                        <div class="col forecast-grid">
-                            <h5>Date</h5>
-                            Add icon for weather
-                            <dl>
-                                <dt>Temp: </dt>
-                                <dd>73.72 F</dd>
-                                <dt>Wind: </dt>
-                                <dd>windy</dd>
-                                <dt>Humidity: </dt>
-                                <dd>66%</dd>
-                            </dl>
-                        </div>
-                        <div class="col forecast-grid">
-                            <h5>Date</h5>
-                            Add icon for weather
-                            <dl>
-                                <dt>Temp: </dt>
-                                <dd>73.72 F</dd>
-                                <dt>Wind: </dt>
-                                <dd>windy</dd>
-                                <dt>Humidity: </dt>
-                                <dd>66%</dd>
-                            </dl>
-                        </div> -->
+                        <!-- This is populated in JS  -->
                     </div>
                 </div>
             </div>
